--- a/discoveryInterface/libp2p/protocols/rendezvous.html
+++ b/discoveryInterface/libp2p/protocols/rendezvous.html
@@ -207,8 +207,9 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#RendezVous"
     title="RendezVous = ref object of LPProtocol
-  indexes: Table[string, seq[int]]
   registered: OffsettedSeq[RegisteredData]
+  indexes: Table[string, seq[int]]
+  rng: ref HmacDrbgContext
   salt: string
   defaultDT: Moment
   registerDeletionLoop: Future[void]
@@ -231,8 +232,10 @@ window.addEventListener("DOMContentLoaded", main2);
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">advertise
-      <li><a class="reference" href="#advertise%2CRendezVous%2Cstring%2Cuint64"
-    title="advertise(rdv: RendezVous; ns: string; ttl: uint64 = MinimumTTL): Future[void]">advertise(rdv: RendezVous; ns: string; ttl: uint64 = MinimumTTL): Future[void]</a></li>
+      <li><a class="reference" href="#advertise%2CRendezVous%2Cstring%2CDuration"
+    title="advertise(rdv: RendezVous; ns: string; ttl: Duration = MinimumDuration): Future[
+    void]">advertise(rdv: RendezVous; ns: string; ttl: Duration = MinimumDuration): Future[
+    void]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">new
@@ -243,8 +246,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">request
-      <li><a class="reference" href="#request%2CRendezVous%2Cstring"
-    title="request(rdv: RendezVous; ns: string): Future[seq[PeerRecord]]">request(rdv: RendezVous; ns: string): Future[seq[PeerRecord]]</a></li>
+      <li><a class="reference" href="#request%2CRendezVous%2Cstring%2Cint"
+    title="request(rdv: RendezVous; ns: string; l: int = 1000'u64.int): Future[
+    seq[PeerRecord]]">request(rdv: RendezVous; ns: string; l: int = 1000'u64.int): Future[
+    seq[PeerRecord]]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">requestLocally
@@ -309,8 +314,9 @@ class="link-seesrc" target="_blank">Source</a>
 <dl class="item">
 <div id="RendezVous" class="tohide">
 <dt><pre><a href="rendezvous.html#RendezVous"><span class="Identifier">RendezVous</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>
-  <span class="Identifier">indexes</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">]</span>
   <span class="Identifier">registered</span><span class="Other">:</span> <a href="../utils/offsettedseq.html#OffsettedSeq"><span class="Identifier">OffsettedSeq</span></a><span class="Other">[</span><span class="Identifier">RegisteredData</span><span class="Other">]</span>
+  <span class="Identifier">indexes</span><span class="Other">:</span> <span class="Identifier">Table</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">]</span>
+  <span class="Identifier">rng</span><span class="Other">:</span> <span class="Keyword">ref</span> <span class="Identifier">HmacDrbgContext</span>
   <span class="Identifier">salt</span><span class="Other">:</span> <span class="Identifier">string</span>
   <span class="Identifier">defaultDT</span><span class="Other">:</span> <span class="Identifier">Moment</span>
   <span class="Identifier">registerDeletionLoop</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span>
@@ -323,9 +329,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L290"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L292"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L290" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L292" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -351,17 +357,17 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<div id="advertise,RendezVous,string,uint64" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#advertise%2CRendezVous%2Cstring%2Cuint64"><span class="Identifier">advertise</span></a><span class="Other">(</span><span class="Identifier">rdv</span><span class="Other">:</span> <a href="rendezvous.html#RendezVous"><span class="Identifier">RendezVous</span></a><span class="Other">;</span> <span class="Identifier">ns</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">ttl</span><span class="Other">:</span> <span class="Identifier">uint64</span> <span class="Other">=</span> <span class="Identifier">MinimumTTL</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+<div id="advertise,RendezVous,string,Duration" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#advertise%2CRendezVous%2Cstring%2CDuration"><span class="Identifier">advertise</span></a><span class="Other">(</span><span class="Identifier">rdv</span><span class="Other">:</span> <a href="rendezvous.html#RendezVous"><span class="Identifier">RendezVous</span></a><span class="Other">;</span> <span class="Identifier">ns</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">ttl</span><span class="Other">:</span> <span class="Identifier">Duration</span> <span class="Other">=</span> <span class="Identifier">MinimumDuration</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
     <span class="Identifier">void</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
             <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L467"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L478"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L467" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L478" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -372,9 +378,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L588"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L608"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L588" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L608" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -385,22 +391,23 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L622"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L643"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L622" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L643" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="request,RendezVous,string" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#request%2CRendezVous%2Cstring"><span class="Identifier">request</span></a><span class="Other">(</span><span class="Identifier">rdv</span><span class="Other">:</span> <a href="rendezvous.html#RendezVous"><span class="Identifier">RendezVous</span></a><span class="Other">;</span> <span class="Identifier">ns</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">seq</span><span class="Other">[</span><a href="../routing_record.html#PeerRecord"><span class="Identifier">PeerRecord</span></a><span class="Other">]</span><span class="Other">]</span> {.
-    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="request,RendezVous,string,int" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#request%2CRendezVous%2Cstring%2Cint"><span class="Identifier">request</span></a><span class="Other">(</span><span class="Identifier">rdv</span><span class="Other">:</span> <a href="rendezvous.html#RendezVous"><span class="Identifier">RendezVous</span></a><span class="Other">;</span> <span class="Identifier">ns</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">l</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1000'u64</span><span class="Other">.</span><span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <span class="Identifier">seq</span><span class="Other">[</span><a href="../routing_record.html#PeerRecord"><span class="Identifier">PeerRecord</span></a><span class="Other">]</span><span class="Other">]</span> {.<span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+                       <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L496"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L507"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L496" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L507" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -411,9 +418,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L484"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L493"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L484" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L493" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -423,9 +430,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L578"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L598"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L578" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L598" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -436,9 +443,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L560"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L580"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L560" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L580" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -448,9 +455,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L551"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L571"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L551" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L571" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -466,9 +473,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L637"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L657"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L637" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L657" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -479,9 +486,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L643"
+href="https://github.com/status-im/nim-libp2p/tree/discoveryInterface/libp2p/protocols/rendezvous.nim#L663"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L643" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/protocols/rendezvous.nim#L663" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -495,7 +502,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-21 14:19:52 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-26 10:20:01 UTC</small>
       </div>
     </div>
   </div>
