--- a/tron/libp2p/peerinfo.html
+++ b/tron/libp2p/peerinfo.html
@@ -225,7 +225,7 @@ window.addEventListener("DOMContentLoaded", main2);
   <ul class="simple simple-toc-section">
       <ul class="simple nested-toc-section">fullAddrs
       <li><a class="reference" href="#fullAddrs%2CPeerInfo"
-    title="fullAddrs(p: PeerInfo): seq[MultiAddress]">fullAddrs(p: PeerInfo): seq[MultiAddress]</a></li>
+    title="fullAddrs(p: PeerInfo): MaResult[seq[MultiAddress]]">fullAddrs(p: PeerInfo): MaResult[seq[MultiAddress]]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">new
@@ -239,9 +239,9 @@ window.addEventListener("DOMContentLoaded", main2);
   </ul>
   <ul class="simple nested-toc-section">parseFullAddress
       <li><a class="reference" href="#parseFullAddress%2CMultiAddress"
-    title="parseFullAddress(ma: MultiAddress): (PeerId, MultiAddress)">parseFullAddress(ma: MultiAddress): (PeerId, MultiAddress)</a></li>
-  <li><a class="reference" href="#parseFullAddress%2Cstring"
-    title="parseFullAddress(ma: string): (PeerId, MultiAddress)">parseFullAddress(ma: string): (PeerId, MultiAddress)</a></li>
+    title="parseFullAddress(ma: MultiAddress): MaResult[(PeerId, MultiAddress)]">parseFullAddress(ma: MultiAddress): MaResult[(PeerId, MultiAddress)]</a></li>
+  <li><a class="reference" href="#parseFullAddress"
+    title="parseFullAddress(ma: string | seq[byte]): MaResult[(PeerId, MultiAddress)]">parseFullAddress(ma: string | seq[byte]): MaResult[(PeerId, MultiAddress)]</a></li>
 
   </ul>
   <ul class="simple nested-toc-section">shortLog
@@ -334,8 +334,8 @@ class="link-seesrc" target="_blank">Source</a>
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
 <div id="fullAddrs,PeerInfo" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#fullAddrs%2CPeerInfo"><span class="Identifier">fullAddrs</span></a><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <a href="peerinfo.html#PeerInfo"><span class="Identifier">PeerInfo</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#fullAddrs%2CPeerInfo"><span class="Identifier">fullAddrs</span></a><span class="Other">(</span><span class="Identifier">p</span><span class="Other">:</span> <a href="peerinfo.html#PeerInfo"><span class="Identifier">PeerInfo</span></a><span class="Other">)</span><span class="Other">:</span> <a href="multiaddress.html#MaResult"><span class="Identifier">MaResult</span></a><span class="Other">[</span><span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -355,35 +355,35 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/tron/libp2p/peerinfo.nim#L75"
+href="https://github.com/status-im/nim-libp2p/tree/tron/libp2p/peerinfo.nim#L79"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerinfo.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerinfo.nim#L79" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
 <div id="parseFullAddress,MultiAddress" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#parseFullAddress%2CMultiAddress"><span class="Identifier">parseFullAddress</span></a><span class="Other">(</span><span class="Identifier">ma</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Other">(</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#parseFullAddress%2CMultiAddress"><span class="Identifier">parseFullAddress</span></a><span class="Other">(</span><span class="Identifier">ma</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">:</span> <a href="multiaddress.html#MaResult"><span class="Identifier">MaResult</span></a><span class="Other">[</span><span class="Other">(</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">]</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/tron/libp2p/peerinfo.nim#L64"
+href="https://github.com/status-im/nim-libp2p/tree/tron/libp2p/peerinfo.nim#L65"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerinfo.nim#L64" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerinfo.nim#L65" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="parseFullAddress,string" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#parseFullAddress%2Cstring"><span class="Identifier">parseFullAddress</span></a><span class="Other">(</span><span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Other">(</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><a href="errors.html#LPError"><span class="Identifier">LPError</span></a><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="parseFullAddress" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#parseFullAddress"><span class="Identifier">parseFullAddress</span></a><span class="Other">(</span><span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Operator">|</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <a href="multiaddress.html#MaResult"><span class="Identifier">MaResult</span></a><span class="Other">[</span><span class="Other">(</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">,</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">)</span><span class="Other">]</span> {.
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span>.}</pre></dt>
 <dd>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/tron/libp2p/peerinfo.nim#L72"
+href="https://github.com/status-im/nim-libp2p/tree/tron/libp2p/peerinfo.nim#L76"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerinfo.nim#L72" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/peerinfo.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -443,7 +443,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-26 15:50:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-28 09:40:52 UTC</small>
       </div>
     </div>
   </div>
